2008-02-11  Matthias Clasen  <mclasen@redhat.com>

	Support keynav in status icons.  (#473786, Li Yuan)

	* gtk/gtkstatusicon.c: Handle keynav, make the tray icon focusable.

	* gtk/gtktrayicon-x11.c: Draw a focus rectangle when focused.

2008-02-11  Kristian Rietveld  <kris@imendio.com>

	* gtk/gtkcellview.c (gtk_cell_view_cell_layout_reorder)
	* gtk/gtkiconview.c (gtk_icon_view_cell_layout_reorder): plug leak
	wrt. link deletion from list; contination of fix for #503569.

2008-02-11  Emmanuele Bassi  <ebassi@gnome.org>

	* gtk/gtkrecentchoosermenu.c:
	(gtk_recent_chooser_menu_constructor): Set no-show-all flag
	on the placeholder menu item.

	* tests/testrecentchoosermenu.c:
	(create_recent_chooser_menu): Use gtk_widget_show_all() to test
	whether the placeholder menu item gets shown.

2008-02-10  Cody Russell  <bratsche@gnome.org>

	* gtk/gtkfilechooser.c (gtk_file_chooser_get_current_folder_uri):
	Check the return value of _gtk_file_chooser_get_file_system () for
	NULL before passing it to gtk_file_system_path_to_uri ().
	(#515667, Francesco Montorsi)

2008-02-10  Philip Withnall  <pwithnall@svn.gnome.org>

	* gtk/gtkbuilder.c: Improve the documentation for
	gtk_builder_connect_signals. (#514471)

2008-02-10  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkrecentaction.c: Propagate local-only.  (#511987, 
	Jonh Wendell)

2008-02-08  Cody Russell  <bratsche@gnome.org>

	* gtk/gtkcombobox.c (gtk_combo_box_cell_layout_pack_start):
	Removed an extra semicolon.  (#515219, reported by Kazuki IWAMOTO)

2008-02-08  Richard Hult  <richard@imendio.com>

	* gdk/quartz/gdkevents-quartz.c (gdk_event_translate): Ignore the
	delta from the NSEvent for now, generating multiple scroll events
	results in a lot of events getting queued up and things get really
	slow.

2008-02-08  Sven Herzberg  <sven@imendio.com>

	Adjust the code to match the documentation, examples, "common sense"
	and existing applications.
